--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "Open Source CSS Framework",
   "main": "circli.scss",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build:sass && npm run build-autoprefix",
+    "build:sass": "node-sass --output-style expanded --source-map true circli.scss css/circli.css",
+    "build:watch": "npm run build:sass -- --watch",
+    "build:autoprefixer" : "postcss --use autoprefixer --map false --output css/circli.css css/circli.css"
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/kl0sin/Circli/issues"
   },
-  "homepage": "https://github.com/kl0sin/Circli#readme"
+  "homepage": "https://github.com/kl0sin/Circli#readme",
+  "dependencies": {
+    "autoprefixer": "^9.1.3",
+    "node-sass": "^4.9.3",
+    "postcss-cli": "^6.0.0"
+  }
 }
